--- a/.sonar-project.properties
+++ b/.sonar-project.properties
@@ -1,7 +1,6 @@
-sonar.projectKey=Netflix
-sonar.projectName=Netflix
-sonar.projectVersion=1.0
-sonar.sources=src
-sonar.language=js
-sonar.sourceEncoding=UTF-8
-sonar.exclusions=**/node_modules/**
+export SONAR_SCANNER_VERSION=6.2.1.4610
+export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux-x64
+curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux-x64.zip
+unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
+export PATH=$SONAR_SCANNER_HOME/bin:$PATH
+export SONAR_SCANNER_OPTS="-server"
