--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -16,6 +16,13 @@ spec:
     spec:
       containers:
       - name: netflix-app
-        image: nasi101/netflix:latest
+        image: luniemma/netflix:latest
         ports:
         - containerPort: 80
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "500m"
+          limits:
+            memory: "512Mi"
+            cpu: "1"
