--- a/Kubernetes/service.yml
+++ b/Kubernetes/service.yml
@@ -1,3 +1,17 @@
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: netflix-app
+#   labels:
+#     app: netflix-app
+# spec:
+#   type: NodePort
+#   ports:
+#   - port: 80
+#     targetPort: 80
+#     nodePort: 30007
+#   selector:
+#     app: netflix-app
 apiVersion: v1
 kind: Service
 metadata:
@@ -5,10 +19,9 @@ metadata:
   labels:
     app: netflix-app
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - port: 80
     targetPort: 80
-    nodePort: 30007
   selector:
     app: netflix-app
